# spin-qe

./: .gitignore  Burner.ipynb  LICENSE  README.md  myqlm.ipynb  plot_sq_data.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/: sq_fid_data.npz
results/: fidelity_fit.ipynb
src/spin_qe/: base.py  optimisation.py  spin_qubits.py  try_computation.py
src/spin_qe/NISQalgorithm/: fidelity original.py  fidelity.py
src/spin_qe/components/: cables.py  cryostat.py  cryostat_old.py  efficiency.py  specific power.py
src/spin_qe/device/: spin_qubits.py  spin_qubitsGlobal.py
src/spin_qe/optimisation/: Fidelity_plots.py  optimisation NISQ.py  optimisation copy.py  optimisation.py  plot_cables.py  qlm_code.py
src/spin_qe/validation/: attenuation.py  energy.py  frequency.py  power.py  temperature.py
src/spin_qe/visualisation/: Plot_fitting.py  advanced_noise_model.py  cables_vs_drive.py  cryo efficiency fit.py  cryostat_consumption.py  fidelity.py  gate_efficiency.py  justplots.py  noise_model.py  power_optimum.py
tests/: test_base_pytest.py
tests/components/: test_cryostat.py
tests/validation/: test_attenuation_pytest.py  test_frequency_pytest.py  test_power_pytest.py  test_temperature_pytest.py
