[project]
name = "spin-qe"
version = "0.1.0"
description = "A package for simulating quantum energetics of the spin qubit platform using models from experiments."
authors = [
    {name = "k-koteva", email = "koteva.k.i@gmail.com"},
]
dependencies = [
    "pydantic>=2.3.0",
    "numpy>=1.25.2",
    "scipy==1.11.2",
    "pandas>=2.1.0",
    "autoviz>=0.1.730",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "pytest>=7.4.1",
    "loguru>=0.7.2",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pytest.ini_options]
testpaths = ["tests"]