[project]
name = "spin-qe"
version = "0.1.0"
description = "A package for simulating quantum energetics of the spin qubit platform using models from experiments."
authors = [
    {name = "k-koteva", email = "koteva.k.i@gmail.com"},
]
dependencies = [
    "pydantic>=2.3.0",
    "numpy>=1.25.2",
    "scipy>=1.11.4",
    "pandas>=2.1.0",
    "autoviz>=0.1.730",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "pytest>=7.4.1",
    "loguru>=0.7.2",
    "coverage>=7.4.3",
    "autopep8>=2.0.4",
    "isort>=5.12.0",
    "myqlm>=1.9.5",
    "pyscf>=2.4.0",
    "sympy>=1.12",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-W ignore::DeprecationWarning:jupyter_client.*"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if __name__ == .__main__.:",
    # any other patterns you wish to exclude
]

[tool.coverage.run]
omit = [
    "tests/*",
    # Any other patterns to exclude
]

[tool.pdm]

